...
    android:layout_height="match_parent"
    android:background="@drawable/dal"
    tools:context=".courseRecommand"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/BComputerScience"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="47dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="115dp"
        android:background="@android:color/darker_gray"
        android:onClick="onButtonClick"
        android:text="Computer Science"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/BCommerce"
        app:layout_constraintEnd_toStartOf="@+id/BArts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BArts"
...
