...
    android:layout_height="match_parent"
    android:background="@drawable/dal"
    tools:layout_editor_absoluteY="81dp">


    <Button
        android:id="@+id/B1000"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="55dp"
        android:layout_marginEnd="71dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="52dp"
        android:layout_weight="1"
        android:background="@android:color/darker_gray"
        android:onClick="onButtonClick"
        android:text="1000+"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/B2000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/B2000"
...
